--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+navCompose = "2.8.0"
 agp = "8.10.1"
 kotlin = "2.0.21"
 coreKtx = "1.17.0"
@@ -11,6 +12,7 @@ composeBom = "2024.09.00"
 navigationRuntimeAndroid = "2.9.6"
 
 [libraries]
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
